syntax = "proto3";

// Package ctrl.v1 provides the Cluster service for multi-cluster deployment orchestration.
//
// The Cluster service enables a central control plane to coordinate deployments and sentinels
// across multiple Kubernetes clusters. Each cluster runs an agent (such as krane) that establishes
// a long-lived watch connection to receive deployment and sentinel configuration events.
//
// This design follows the Kubernetes watch pattern where agents (like kubelet) maintain
// a streaming connection to receive incremental updates, enabling real-time deployment
// orchestration across distributed clusters.
package ctrl.v1;

option go_package = "github.com/unkeyed/unkey/go/gen/proto/ctrl/v1;ctrlv1";

// ClusterService coordinates deployment and sentinel configurations across multiple clusters.
//
// Agents in each cluster establish a watch stream to receive configuration events
// from the control plane. The service streams deployment and sentinel lifecycle events
// (apply, delete) to the appropriate clusters based on their cluster_id and region.
//
// The watch connection is designed to be long-lived with automatic reconnection on failure.
// When an agent reconnects, it should initiate reconciliation to ensure consistency.
service ClusterService {

  // Watch establishes a stream for receiving deployment and sentinel events for a specific cluster.
  //
  // The cluster agent initiates this connection and keeps it open to receive real-time updates.
  // Events are filtered server-side based on the cluster_id and region provided in the request.
  //
  // The stream sends events as they occur, eliminating the need for polling. If the connection
  // is lost, the agent should reconnect and use reconciliation mechanisms to catch up
  // on any missed events.
  rpc Watch(WatchRequest) returns (stream InfraEvent);

  // returns a watch events for compatibility but will never return a delete event
  // only apply events from currently desired infrastructure are included
  rpc GetDesiredState(GetDesiredStateRequest) returns (stream InfraEvent);

  // request a single deployment and return its desired state
  rpc GetDesiredDeploymentState(GetDesiredDeploymentStateRequest) returns (DeploymentEvent);
  // request a single sentinel and return its desired state
  rpc GetDesiredSentinelState(GetDesiredSentinelStateRequest) returns (SentinelEvent);


  rpc UpdateInstance(UpdateInstanceRequest) returns (UpdateInstanceResponse);
  rpc UpdateSentinel(UpdateSentinelRequest) returns (UpdateSentinelResponse);

}


message GetDesiredSentinelStateRequest {
  string sentinel_id = 1;
}

message GetDesiredDeploymentStateRequest {
  string deployment_id = 1;
}

message DeleteInstanceResponse {
}

message UpdateInstanceRequest {
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_PENDING = 1; // Deployment request accepted, container/pod creation in progress
    STATUS_RUNNING = 2; // Container/pod is running and healthy
    STATUS_FAILED = 3; // Container/pod failed to start
  }



  message Create {
    string deployment_id = 1;
    string pod_name = 2;
    string address = 3;
    int32 cpu_millicores = 4;
    int32 memory_mib = 5;


      Status status = 6;

  }
  message Update {


    string deployment_id = 1;
    string pod_name = 2;


      Status status = 3;

  }
  message Delete {
    string deployment_id = 1;
    string pod_name = 2;

  }



  oneof change {
    Create create = 1;
    Update update = 2;
    Delete delete = 3;

  }

}

message UpdateInstanceResponse {

}


message UpdateSentinelRequest {



    message Create {
      string sentinel_id = 1;
        int32 running_replicas = 2;
    }
    message Update {
      string sentinel_id = 1;
        int32 running_replicas = 2;

    }
    message Delete {
      string sentinel_id = 1;
    }

    oneof change {
      Create create = 1;
      Update update = 2;
      Delete delete = 3;

    }

}

message UpdateSentinelResponse {

}



// WatchRequest identifies the cluster requesting a watch stream.
message WatchRequest {

  // client_id uniquely identifies the client requesting the watch stream.
  string client_id = 1;

  // labels to match events for
  // typically regions are used
  // [region]: aws:us-east-1
  //
  // The server must only send events where all labels match the selector.
  map<string, string> selectors= 2;
}


// GetDesiredStateRequest identifies the cluster requesting a full sync stream.
message GetDesiredStateRequest {

  // client_id uniquely identifies the client requesting the sync stream.
  string client_id = 1;

  // labels to match events for
  // typically regions are used
  // [region]: aws:us-east-1
  //
  // The server must only send infrastructure configs where all labels match the selector.
  map<string, string> selectors= 2;
}

// SentinelEvent represents a lifecycle event for an API sentinel configuration.
//
// Sentinels are ingress points for services, typically handling routing, load balancing,
// and API management. The event follows a declarative model where the cluster agent ensures
// the cluster state matches the desired configuration.
message SentinelEvent {
  // event contains the specific sentinel operation to perform.
  // Only one event type is set per message, determining the action the agent should take.
  oneof event {
    // apply indicates the sentinel should exist with this configuration.
    // The agent will create the sentinel if it doesn't exist or update it if it does.
    // This follows the same semantics as "kubectl apply" - declare desired state
    // and let the agent determine the appropriate action.
    ApplySentinel apply = 1;

    // delete indicates the sentinel should be removed from the cluster.
    DeleteSentinel delete = 2;
  }
}

// DeploymentEvent represents a lifecycle event for an application deployment.
//
// Deployments are the primary workload type, representing stateless applications
// that can be scaled horizontally. The event follows a declarative model where
// the cluster agent ensures the cluster state matches the desired configuration.
message DeploymentEvent {
  // event contains the specific deployment operation to perform.
  // Only one event type is set per message, determining the action the agent should take.
  oneof event {
    // apply indicates the deployment should exist with this configuration.
    // The agent will create the deployment if it doesn't exist or update it if it does.
    // This follows the same semantics as "kubectl apply" - declare desired state
    // and let the agent determine the appropriate action.
    ApplyDeployment apply = 1;

    // delete indicates the deployment should be removed from the cluster.
    DeleteDeployment delete = 2;
  }
}

// ApplySentinel contains the desired configuration for a sentinel.
//
// The cluster agent will ensure a sentinel exists with this exact configuration, creating it if
// it doesn't exist or updating it if it does. All fields except namespace are required.
// The control plane ensures that sentinel_id is unique within the namespace.
message ApplySentinel {
  // namespace is the Kubernetes namespace in which the sentinel should exist.
  string namespace = 1;

  string k8s_crd_name = 2;
  // workspace_id identifies the workspace that owns this sentinel.
  string workspace_id = 3;

  // project_id identifies the project within the workspace.
  string project_id = 4;

  // environment_id in which the sentinel should exist.
  string environment_id = 5;

  // sentinel_id is the unique identifier for this sentinel within the namespace.
  string sentinel_id = 6;

  // image is the container image to deploy for the sentinel.
  // Must be a valid container registry URL accessible by the cluster.
  // Example: "ghcr.io/unkeyed/sentinel:v1.2.3"
  string image = 7;

  // replicas is the desired number of sentinel instances.
  // Must be at least 1. For high availability, use 3 or more.
  uint32 replicas = 8;

  // cpu_millicores is the CPU request/limit in millicores (1000 = 1 CPU core).
  // This ensures the sentinel has sufficient CPU resources.
  // Example: 500 = 0.5 CPU cores
  uint32 cpu_millicores = 9;

  // memory_size_mib is the memory request/limit in mebibytes.
  // This ensures the sentinel has sufficient memory.
  // Example: 512 = 512 MiB
  uint32 memory_size_mib = 10;
}

// DeleteSentinel identifies a sentinel to remove from the cluster.
//
// The sentinel and all its resources (pods, services, ingress) will be deleted.
// In-flight requests may be disrupted unless proper connection draining is configured.
message DeleteSentinel {

  // sentinel_id identifies the sentinel to delete.
  // All resources with this sentinel_id in the namespace will be removed.
  string sentinel_id = 1;
}

// ApplyDeployment contains the desired configuration for a deployment.
//
// The cluster agent will ensure a deployment exists with this exact configuration, creating it if
// it doesn't exist or updating it if it does. All fields except namespace are required.
// The control plane ensures that deployment_id is unique within the namespace.
message ApplyDeployment {
  // namespace is the Kubernetes namespace in which the deployment should exist.
  string namespace = 1;

  // workspace_id identifies the workspace that owns this deployment.
  // Used for multi-tenancy and access control.
  string workspace_id = 2;

  // project_id identifies the project within the workspace.
  // Deployments are scoped to projects for organizational purposes.
  string project_id = 3;

  // environment_id specifies the environment .
  // Used for environment-specific configuration and isolation.
  string environment_id = 4;

  // deployment_id is the unique identifier for this deployment within the namespace.
  string deployment_id = 5;

  // image is the container image to deploy.
  // Must be a valid container registry URL accessible by the cluster.
  // Example: "gcr.io/myproject/app:v2.1.0"
  string image = 6;

  // replicas is the desired number of pod instances.
  // Must be at least 1. Set higher for increased availability and load distribution.
  uint32 replicas = 7;

  // cpu_millicores is the CPU request/limit in millicores (1000 = 1 CPU core).
  // This ensures each pod has sufficient CPU resources.
  // Example: 250 = 0.25 CPU cores
  uint32 cpu_millicores = 8;

  // memory_size_mib is the memory request/limit in mebibytes.
  // This ensures each pod has sufficient memory.
  // Example: 256 = 256 MiB
  uint32 memory_size_mib = 9;
}

// DeleteDeployment identifies a deployment to remove from the cluster.
//
// The deployment and all its pods will be terminated gracefully according to
// the configured termination grace period. All associated resources (services,
// configmaps specific to this deployment) will also be cleaned up.
message DeleteDeployment {

  // deployment_id identifies the deployment to delete.
  // All resources with this deployment_id in the namespace will be removed.
  string deployment_id = 1;
}

// InfraEvent is streamed from the control plane to cluster agents.
//
// Each event contains either a sentinel or deployment configuration change that
// the agent should apply to its cluster. Events are sent in real-time as
// changes occur in the control plane, enabling immediate propagation of updates
// across the fleet of clusters.
//
// The agent should process events idempotently since the same event may be
// delivered multiple times during network issues or reconnections.
message InfraEvent {
  // event contains the specific event to process.
  // Only one event type is set per InfraEvent, allowing the client to
  // handle different resource types with appropriate logic.
  oneof event {
    // sentinel_event contains a sentinel lifecycle event (apply or delete).
    // The client should apply this to sentinel resources in the cluster.
    SentinelEvent sentinel_event = 2;

    // deployment_event contains a deployment lifecycle event (apply or delete).
    // The client should apply this to deployment resources in the cluster.
    DeploymentEvent deployment_event = 3;
  }
}
